[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Textures/X1.png" type="Texture" id=2]
[ext_resource path="res://fonts/montreal/Montreal-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/montreal/Montreal.tres" type="DynamicFont" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Anim2"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.1, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.101, 0.4 )
}

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 3 )

[node name="Lobby" type="Node"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0.356863, 1, 1 )
margin_right = 1227.0
margin_bottom = 628.0

[node name="Host" type="Button" parent="."]
visible = false
margin_left = 457.0
margin_top = 200.0
margin_right = 745.0
margin_bottom = 287.0
text = "Host a Game"

[node name="Join" type="Button" parent="."]
visible = false
margin_left = 457.0
margin_top = 290.0
margin_right = 745.0
margin_bottom = 377.0
text = "Join a Game"

[node name="CreateGame" type="Panel" parent="."]
visible = false
margin_left = 437.305
margin_top = 102.983
margin_right = 787.305
margin_bottom = 522.983

[node name="ExitLobbyNames2" type="TextureButton" parent="CreateGame"]
margin_left = 330.0
margin_right = 350.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreateGame"]
anims/Anim2 = SubResource( 1 )

[node name="Label" type="Label" parent="CreateGame"]
margin_left = 20.0
margin_top = 50.0
margin_right = 180.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "Game Name"

[node name="GameName" type="LineEdit" parent="CreateGame/Label"]
margin_left = -1.22174
margin_top = 29.8871
margin_right = 298.778
margin_bottom = 65.8871
custom_fonts/font = SubResource( 3 )
placeholder_text = "Max 10 characters"

[node name="Label1" type="Label" parent="CreateGame"]
margin_left = 20.0
margin_top = 135.0
margin_right = 180.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 4 )
text = "Number of Players"

[node name="NOfPlayers" type="LineEdit" parent="CreateGame/Label1"]
margin_left = 175.0
margin_top = -8.0
margin_right = 269.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 5 )
placeholder_text = "Max : 6"

[node name="CreateServerButton" type="Button" parent="CreateGame"]
margin_left = 25.0
margin_top = 323.548
margin_right = 325.0
margin_bottom = 373.548
custom_fonts/font = ExtResource( 4 )
text = "Create Game"

[node name="LobbyNames" type="Panel" parent="."]
visible = false
margin_left = 164.0
margin_top = 50.0
margin_right = 1064.0
margin_bottom = 578.0

[node name="Panel" type="Panel" parent="LobbyNames"]
visible = false
modulate = Color( 0.670588, 0.647059, 0.647059, 1 )
margin_left = 10.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 508.0

[node name="GameNameOriginal" type="Label" parent="LobbyNames"]
margin_left = 20.0
margin_top = 20.0
margin_right = 181.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
text = "GAME NAME"

[node name="PlayerName" type="Label" parent="LobbyNames/GameNameOriginal"]
margin_left = 181.0
margin_right = 362.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 7 )
text = "PLAYER NAME"

[node name="Label" type="Label" parent="LobbyNames/GameNameOriginal"]
margin_left = 382.0
margin_right = 461.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
text = "SLOTS"

[node name="GameName" type="Label" parent="LobbyNames"]
visible = false
margin_left = 20.0
margin_top = 70.0
margin_right = 181.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "Game Name"
align = 1

[node name="PlayerName" type="Label" parent="LobbyNames/GameName"]
margin_left = 181.0
margin_right = 362.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "Player Name"
align = 1

[node name="Label" type="Label" parent="LobbyNames/GameName"]
margin_left = 382.0
margin_right = 461.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "1/2"
align = 1

[node name="Button" type="Button" parent="LobbyNames/GameName"]
margin_left = 481.0
margin_right = 544.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.431373, 0.431373, 0.431373, 1 )
text = "JOIN"

[node name="ExitLobbyNames" type="TextureButton" parent="LobbyNames"]
margin_left = 880.0
margin_right = 900.0
margin_bottom = 20.0
texture_normal = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LobbyNames"]
"anims/New Anim" = SubResource( 9 )

[node name="ConnectButton" type="Button" parent="."]
margin_left = 414.0
margin_top = 280.0
margin_right = 814.0
margin_bottom = 380.0
custom_fonts/font = ExtResource( 4 )
text = "Connect"

[node name="ChooseYourName" type="LineEdit" parent="ConnectButton"]
margin_top = -60.0
margin_right = 400.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 10 )
align = 1
placeholder_text = "Chose your name"
[connection signal="pressed" from="Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="CreateGame/ExitLobbyNames2" to="." method="_on_ExitLobbyNames2_pressed"]
[connection signal="pressed" from="CreateGame/CreateServerButton" to="." method="_on_CreateServerButton_pressed"]
[connection signal="pressed" from="LobbyNames/ExitLobbyNames" to="." method="_on_ExitLobbyNames_pressed"]
[connection signal="pressed" from="ConnectButton" to="." method="_on_ConnectButton_pressed"]
